# fastapi

./: .gitignore  README.md  README.rst  new.json  pyproject.toml
myapp/: demo.py  main.py
myapp/api/: api.py
myapp/api/endpoints/: image.py  movies.py  users.py
myapp/api/repository/: MoviesCreateTable.py  dynamodb.py  image.py  movies.py  schemas.py
tests/: conftest.py  test_movies.py  test_users.py
